--- a/jest.config.json
+++ b/jest.config.json
@@ -1,6 +1,9 @@
 {
-    "setupFiles":[
+    "setupFiles": [
         "raf/polyfill",
         "<rootDir>/src/tests/setupTests.js"
+    ],
+    "snapshotSerializers": [
+        "enzyme-to-json/serializer"
     ]
 }
